# projeto-etl-duckdb

./: README.md  pyproject.toml
