[tool.poetry]
name = "projeto-etl-duckdb"
version = "0.1.0"
description = ""
authors = ["guilherme-ssanto <guilhermesantossilva@id.uff.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
